--- a/i3/config
+++ b/i3/config
@@ -40,7 +40,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run -font "terminus 12"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -179,27 +180,51 @@ client.background #121212
 
 hide_edge_borders smart
 
-bar {
-binding_mode_indicator yes
-        status_command i3blocks -c ~/.config/i3/i3blocks.conf
-        	colors {
+#bar {
+#binding_mode_indicator yes
+#        status_command i3blocks -c ~/.config/i3/i3blocks.conf
+#        	colors {
+#
+#            background #080808 
+#            statusline #808080
+#            separator #808080
+#            focused_workspace #080808 #222222 #808080
+#            active_workspace #080808 #080808 #797979 
+#            inactive_workspace #080808 #080808 #4F4F4F
+#            urgent_workspace #080808 #080808 #EA4C59
+#	}
+#}
 
-            background #080808 
-            statusline #808080
-            separator #808080
-            focused_workspace #080808 #222222 #808080
-            active_workspace #080808 #080808 #797979 
-            inactive_workspace #080808 #080808 #4F4F4F
-            urgent_workspace #080808 #080808 #EA4C59
-	}
+
+
+bar {
+		status_command i3blocks -c ~/.config/i3/i3blocks.conf
+        font pango: Terminus, awesome 9
+
+colors {
+	   		background #383c4a
+			statusline #d3dae3
+			separator  #8396af
+			#	               border  backgr  text
+			focused_workspace  #585e74 #585e74 #ffffff
+			inactive_workspace #21242b #21242b #7c818c
+			urgent_workspace   #5294e2 #5294e2 #ffffff
+	   }
 }
+
+
+
+
 
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
 #exec --no-startup-id nitrogen --restore; sleep 1; compton --config /home/georgi/.compton.conf
 exec --no-startup-id nm-applet
+exec --no-startup-id setxkbmap -model pc105 -layout us,bg -variant ,phonetic -option grp:alt_shift_toggle
 exec --no-startup-id blueman-applet
+#exec --no-startup-id xautolock -time 1 -locker "~/.config/i3/lock.sh"
 
-bindsym $mod+shift+x exec i3lock --color "000000"
+bindsym $mod+shift+x exec "~/.config/i3/lock.sh"
+
 set $mode_launcher Launch: [c]yromium [e]pcmanf 
 bindsym $mod+o mode "$mode_launcher"
 
