--- a/i3/config
+++ b/i3/config
@@ -41,12 +41,9 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-#bindsym $mod+d exec rofi -show run -font "terminus 14"
-#bindsym $mod+Shift+d exec rofi -show drun -font "terminus 14"
-#bindsym $mod+Tab exec rofi -show window -font "terminus 14"
-bindsym $mod+d exec rofi -show run 
-bindsym $mod+Shift+d exec rofi -show drun 
-bindsym $mod+Tab exec rofi -show window 
+bindsym $mod+d exec rofi -show run -font "terminus 12"
+bindsym $mod+Shift+d exec rofi -show drun -font "terminus 12"
+bindsym $mod+Tab exec rofi -show window -font "terminus 12"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
