--- a/rofi/config
+++ b/rofi/config
@@ -1,6 +1,6 @@
-rofi.color-normal:                   #90080808, #c3c3c3, #90080808, #222222, #ffffff
-rofi.color-urgent:                   argb:02d303b, #cc6666, argb:e52d303b, #a54242, #7c818c
-rofi.color-active:                   #90080808, #ffffff, #90080808, #9080808, #000000
-rofi.color-window:                   #90080808, #ffffff, #080808
+rofi.color-normal:                   #90080808, #c4cbd4, #90080808, #60222222, #f9f9f9
+rofi.color-urgent:                   argb:02d303b, #cc6666, argb:e52d303b, #a54242, #f9f9f9
+rofi.color-active:                   argb:02d303b, #b5bd68, argb:e42d303b, #8c9440, #f9f9f9
+rofi.color-window:                   #90080808, #60222222, #90080808
 rofi.separator-style:                solid
-rofi.font:							 terminus 13
+rofi.font:							 terminus 12
