--- a/i3/config
+++ b/i3/config
@@ -103,12 +103,13 @@ bindsym $mod+a focus parent
 set $workspace1 "1: Browser"
 set $workspace2 "2: Terminals"
 set $workspace3 "3: IM"
-
+set $workspace4 "4: RDP"
+set $workspace5 "5: Mail"
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
+bindsym $mod+4 workspace $workspace4
+bindsym $mod+5 workspace $workspace5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
@@ -119,8 +120,8 @@ bindsym $mod+0 workspace 10
 bindsym $mod+Shift+1 move container to workspace $workspace1
 bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+4 move container to workspace $workspace4
+bindsym $mod+Shift+5 move container to workspace $workspace5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
@@ -128,6 +129,12 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 assign [class="Chromium"] $workspace1
+assign [class="ViberPC"] $workspace3
+assign [class="Skype"] $workspace3
+assign [class="Remmina"] $workspace4
+for_window [class="Remmina"] floating enable move right 10px, move down 20px
+for_window [class="ViberPC"] floating enable move right 10px,move down 20px
+for_window [class="Skype"] floating enable move left 10px, move down 30px
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
