Update: add ranger config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,6 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -100,17 +101,18 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-set $workspace1 "1: Browser"
-set $workspace2 "2: Terminals"
-set $workspace3 "3: IM"
-set $workspace4 "4: RDP"
-set $workspace5 "5: Mail"
+set $workspace1 "1: "
+set $workspace2 "2: "
+set $workspace3 "3: "
+set $workspace4 "4: "
+set $workspace5 "5: "
+set $workspace6 "6: "
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace 6
+bindsym $mod+6 workspace $workspace6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
@@ -122,7 +124,7 @@ bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace $workspace4
 bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+6 move container to workspace $workspace6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
@@ -132,10 +134,13 @@ assign [class="Chromium"] $workspace1
 assign [class="ViberPC"] $workspace3
 assign [class="Skype"] $workspace3
 assign [class="Remmina"] $workspace4
+assign [class="mpv"] $workspace6
 for_window [class="Remmina"] floating enable move right 10px, move down 20px
 for_window [class="ViberPC"] floating enable move right 10px,move down 20px
 for_window [class="Skype"] floating enable move left 10px, move down 30px
 
+gaps inner 10
+gaps outer 5
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
