--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -362,7 +362,8 @@ map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
 # Filesystem Operations
 map =  chmod
 
-map cw console rename%space
+# map cw console rename%space
+map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.open_console("rename ")
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
