--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -97,7 +97,7 @@ set show_hidden_bookmarks false
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme solarized
+set colorscheme rosko
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
