--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: System San Francisco Display 10
+# font pango: System San Francisco Display 10
+font pango: Terminus Display 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -135,12 +136,12 @@ assign [class="ViberPC"] $workspace3
 assign [class="Skype"] $workspace3
 assign [class="Remmina"] $workspace4
 assign [class="mpv"] $workspace6
-for_window [class="Remmina"] floating enable move right 10px, move down 20px
-for_window [class="ViberPC"] floating enable move right 10px,move down 20px
-for_window [class="Skype"] floating enable move left 10px, move down 30px
+# for_window [class="Remmina"] floating enable move right 10px, move down 20px
+# for_window [class="ViberPC"] floating enable move right 10px,move down 20px
+# for_window [class="Skype"] floating enable move left 10px, move down 30px
 
-gaps inner 10
-gaps outer 5
+gaps inner 7
+gaps outer 7
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -235,8 +236,9 @@ bar {
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
 #exec --no-startup-id nitrogen --restore; sleep 1; compton --config /home/georgi/.compton.conf
 exec --no-startup-id nm-applet
-exec --no-startup-id setxkbmap -model pc105 -layout us,bg -variant ,phonetic -option grp:alt_shift_toggle
+exec --no-startup-id setxkbmap -model pc105 -layout us,bg -variant ,phonetic -option grp:alt_shift_toggle -option caps:escape
 exec --no-startup-id blueman-applet
+exec --no-startup-id xrandr --output HDMI-1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output eDP-1 --mode 1920x1080 --pos 0x0 --rotate normal
 #exec --no-startup-id xautolock -time 1 -locker "~/.config/i3/lock.sh"
 
 bindsym $mod+ctrl+x exec "~/.config/i3/shutdown.sh"
