Add zathurarc and update ranger and qutebrowser config files

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -362,8 +362,7 @@ map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
 # Filesystem Operations
 map =  chmod
 
-# map cw console rename%space
-map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.open_console("rename ")
+map cw console rename%space
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
@@ -634,4 +633,11 @@ map gr cd ~/repos
 map tr tab_new ~/repos
 map mr shell mv %s ~/repos
 
+map gw cd ~/work
+map tw tab_new ~/work
+map mw shell mv %s ~/work
 
+
+# a plugin that adds file glyphs / icon support to Ranger:
+# https://github.com/alexanderjeurissen/ranger_devicons
+default_linemode devicons
